--- a/templates/base.html
+++ b/templates/base.html
@@ -43,11 +43,11 @@
                     <button class="buttons">👤 Profile</button>
                 </a>
                 <a href="{{ url_for('logout') }}">
-                    <button class="buttons"> Logout</button>
+                    <button class="buttons">🏃🚪 Logout</button>
                 </a>
             {% else %}
                 <a href="{{ url_for('login') }}">
-                    <button class="buttons"> Login</button>
+                    <button class="buttons">🔑 Login</button>
                 </a>
             {% endif %}
 
