--- a/static/barcode_scan_style.css
+++ b/static/barcode_scan_style.css
@@ -1,8 +1,12 @@
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 #reader {
-    width: 300px;
-    margin: 20px auto;
-  }
-  
+    width: 600px;
+}
 #result {
     text-align: center;
-  }
+    font-size: 1.5rem;
+}
