--- a/templates/barcode_scan.html
+++ b/templates/barcode_scan.html
@@ -16,40 +16,34 @@
 {% endblock %}
 
 {% block extra_js %}
-  <!-- Include the html5-qrcode library -->
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html5-qrcode/2.3.4/html5-qrcode.min.js" 
           integrity="sha512-k/KAe4Yff9EUdYI5/IAHlwUswqeipP+Cp5qnrsUjTPCgl51La2/JhyyjNciztD7mWNKLSXci48m7cctATKfLlQ==" 
           crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
   <script>
-    // Create an instance of the scanner, tied to the 'reader' element.
     const scanner = new Html5QrcodeScanner('reader', { 
-        qrbox: { width: 400, height: 250 }, // Dimensions of the scanning box.
-        fps: 30 // Scanning speed.
+        qrbox: { width: 400, height: 250 },
+        fps: 30 //
     });
 
-    // When a barcode is successfully scanned, redirect to the product page.
     function success(scannedBarcode) {
-        // Optionally, you can log the barcode or display a short message.
         document.getElementById('result').innerHTML = `
             <h2>Barcode scanned successfully!</h2>
             <p>Redirecting to product page...</p>
         `;
 
-        // Clear the scanner instance and remove the reader element.
         scanner.clear().then(() => {
             document.getElementById('reader').remove();
-            // Redirect to your product details route.
             window.location.href = "/product/" + encodeURIComponent(scannedBarcode);
         }).catch(err => {
             console.error("Error clearing scanner:", err);
         });
     }
 
-    // Error callback: simply log any scanning errors.
     function error(errMessage) {
+        errMessage = "Try again"
         console.warn("Scan error: " + errMessage);
-        // You can display an error message if desired.
     }
 
     // Start the scanner.
