--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 
         <h1 id="main_title">S U S T A I N A B I T E</h1>
     
-        <h2 id="second_title">oodprinmatter</h2>
+        <h2 id="second_title">foodprint matters</h2>
 
         <!-- Button container -->
         <div class="button-container">
