--- a/templates/landing.html
+++ b/templates/landing.html
@@ -18,10 +18,8 @@
         {% block content %}
 
 
-        <h2 id="main_1">Welcome to Sustainabite!</h2>  
-
         <div id="main_text">
-            <p id="main_2">Your smart companion for conscious consumption.<br><br>
+            <p id="main_2">Your smart companion for conscious consumption!<br><br>
             At Sustainabite, we make sustainability simple. With our database of over 4,500 Finnish products, you can calculate the environmental footprint of your shopping basket in just a few clicks. Whether you're aiming to reduce carbon emissions, make planet-friendly food choices, or just stay informed — we're here to guide your journey.</p>
             <p id="main_3">Start explorin. Sho smarte. Live sustainabl</p>
         </div>
@@ -42,7 +40,7 @@
     
 
 
-            <h1 id="main_category">aicategorie</h1>
+            <h1 id="main_category">Main Categories</h1>
 
             <main class="page-content">
 
