--- a/static/index_style.css
+++ b/static/index_style.css
@@ -37,7 +37,7 @@
 
 #second_title {
   color: rgb(56, 118, 29);
-  font-family: 'Sustainabite_foodprint';
+  font-family: Calibri;
   font-weight: lighter;
   font-size: 3em;
   margin-top: 30px;
