Product styles page updated

--- a/templates/product_details.html
+++ b/templates/product_details.html
@@ -62,6 +62,7 @@
             font-size: 2rem;
             margin-bottom: 30px;
             text-align: center;
+            font-family: 'Pacifico', cursive;
         }
 
         .detail-row {
@@ -70,16 +71,15 @@
             margin: 15px 0;
             padding: 10px;
             border-bottom: 1px solid #eee;
+            font-weight: bold;
         }
 
         .detail-label {
             font-weight: bold;
-            width: 150px;
+            width: 200px;
             color: #38761d;
-        }
-
-        .detail-value {
-            flex: 1;
+            font-family: Calibri;
+            font-size: 1.2em;
         }
 
         .add-to-basket-btn {
@@ -94,6 +94,10 @@
             font-size: 1.1rem;
             cursor: pointer;
             transition: background-color 0.3s;
+        }
+
+        .detail-value {
+            font-family: Calibri;
         }
 
         .add-to-basket-btn:hover {
