The no-result else statement

--- a/templates/search.html
+++ b/templates/search.html
@@ -34,7 +34,7 @@
 
                 {% else %}
                 
-                        <h2 id="no_results">No results found 😭 <br> I'm gonna cry...</h2>
+                        <h2 id="no_results">This product is not <i>(still)</i> in our database.</h2>
                     
                 {% endif %}
             </div>
